# odra-cli

./: Cargo.toml  LICENSE
src/: args.rs  container.rs  entry_point.rs  lib.rs  test_utils.rs  tmp.rs  types.rs
src/cmd/: contract.rs  deploy.rs  mod.rs  scenario.rs
