[package]
name = "odra-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo", "string"] }
prettycli = "0.1.1"
odra = { git = "https://github.com/odradev/odra", branch = "fix/cep78-more-fns", features = [], default-features = false }
odra-casper-livenet-env = { git = "https://github.com/odradev/odra", branch = "fix/cep78-more-fns" }
odra-casper-rpc-client = { git = "https://github.com/odradev/odra", branch = "fix/cep78-more-fns" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "=1.0.195", default-features = false }
serde_json = { version = "=1.0.113", default-features = false }
serde_derive = { version = "=1.0.195", features = ["default"] }
toml = "0.8.13"
project-root = "0.2.2"
tokio = { version = "1.38.1" }
pretty_assertions = "1.4.0"